NUE - Network Utterance Environment

■TODO
・管理者権限のある人は記事を作成/編集/削除できる。
・管理者権限のあるなしかかわらず、作成された記事を見ることができる。
・初回リリース。
・タグシステム実装。ニコ動方式。カテゴリタグが目次に表示される。
・権限システム実装。データ仕様通り。

■BUGS

======================================================================
■2011/5/31 - Version 0.0.27
ユーザDAOの一部、および記事DAOにて、トランザクション書き込みに対応した。
記事DAOの基底フォーマットを一部変更。

■2011/5/30 - Version 0.0.26
インデックスDAO共通クラスを作成。
記事DAOを作成。
ユーザDAOのデシリアライズ時コンストラクタが呼ばれないことを
想定しなかったことに起因する幾つかの不具合を修正。

■2011/5/29 - Version 0.0.24
ログオン/ログオフ機能追加。
ログイン セッションへの読み書きを分散して行っていたが一本化した。
プログラム側では更新日時を全てUNIX時間で管理するようにした。
記事表示機能周りにおけるフォルダ構成の整理。
トップページへ戻るリンクを設置した。
HTML5対応及びXSLレベルでブラウザ依存対応しやすいよう、XML出力にUA情報を追加した。
その他XSL周りの細部の不具合を修正。

■2011/5/28 - Version 0.0.22
最低限のユーザ作成機能を実装完了。
最低限のユーザ情報変更画面を追加。
ログイン中情報表示に対応。
リダイレクト機能追加。
実体DAOの記憶領域に既定のフォーマットを設定する機能を追加。
モード切替処理において、ディレクトリトラバーサル攻撃される脆弱性がある不具合を修正。
その他DAO周りの細部の不具合を修正。
XML Schema及びサンプルXML出力追加。

■2011/5/27 - Version 0.0.20
初回表示画面を最低限必要な分だけ実装。
ユーザ作成画面をガワだけ作成。
XML構築機能において、テキストを追加する機能を追加。
XML構築機能において、HTMLタグ埋め込み機能を強化。

■2011/5/26 - Version 0.0.18
ページカテゴリ新規作成画面をガワだけ作成。
ユーザDAO実装完了。
XML構築機能において、デバッグログ出力機能と埋め込みHTMLを作成する機能を追加。
DB接続クラスに単一値を取得する機能を追加。
DB接続クラスで明示的にcloseしないと再接続できないようにした。
DB接続クローズ時に例外が飛ぶ不具合を修正。
DB接続失敗時の例外取得機能が常にnullを返してしまう不具合を修正。
DB接続失敗時にエラーメッセージではなく「エラー」が発生してしまう不具合を修正。
実体DAOにおいて、更新日時をロールバックするのを忘れていた不具合を修正。
ファイル キャッシュ機能にてベースクラスのコンストラクタを呼び出せない不具合を修正。

■2011/5/25 - Version 0.0.16
実体DAOクラスを実装完了。
ファイル キャッシュ機能をほぼ完全に作り直し。
DB接続処理をシーンではなく実体側に持つようにした。
MySQLクラス解放時に例外が飛ぶ不具合を修正。
実体周りで不足していたSQLを追加。
ユーザ周りで余計なSQLを削除。

■2011/5/24 - Version 0.0.12
データベース接続機能を実装完了。
ユーザDAO実装の続き。
実体DAO・ファイル キャッシュをガワだけ追加。
SQLの配置やパラメータの指定方法を大幅に変更。
ファイル同士のインクルード関係がカオスになっていた不具合を修正。

■2011/5/23 - Version 0.0.8
DB接続失敗時にエラーメッセージを表示するようにした。
DB解放時にコミットするようにした。
XML構築機能の小規模な改良。
バージョン情報をPHP側でも持つようにした。
XSLスキンの小規模な改良。
スタイルシート追加。
ユーザDAOをガワだけ追加。

■2011/5/22 - Version 0.0.4
DOMを使用したXML構築機能を実装。
サーバサイドXSLT機能を実装。
0.0.1で実装したガワだけデータベース接続機能を半分ほど実装。
index.phpのダミー出力を削除。
ページ出力をGZIP圧縮するようにした。

■2011/5/21 - Version 0.0.2
内部的にStateパターンを構築。